# src/api/controllers/admin/subcategory.js
@@ -6,9 +6,10 @@ const createsubCategory = async (req, res) => {
     try {
 
         const { name, categoryId } = req.body
-        const { _id, isAdmin } = req.user;
-        if (isAdmin == false) {
-            return useErrorResponse(res,massages.unAutherized,403    )
+        const { _id, role } = req.user;
+        console.log(role)
+        if (!(role ==='superAdmin'|| role === 'admin')) {
+            return useErrorResponse(res, massages.unAutherized, 403)
         }
 
         const existingcategory = await Category.findOne({ name })
@@ -21,15 +22,15 @@ const createsubCategory = async (req, res) => {
                     name: name
                 }
             )
-           const data= savedata.save();
+            const data = await savedata.save();
             if (data) {
-                return useSuccessResponse(res,massages.createsubCategory,data,201)
-                
+                return useSuccessResponse(res, massages.success, data, 201)
+
             }
         }
         else
-            return useErrorResponse(res,massages.internalError,500)
-            
+            return useErrorResponse(res, massages.internalError, 500)
+
     }
     catch (err) {
         console.log(err)
@@ -40,10 +41,10 @@ const createsubCategory = async (req, res) => {
 const updatesubCategory = async (req, res) => {
     try {
         const { name, categoryId, subCategoryId } = req.body;
-        const { _id, isAdmin } = req.user;
-        if (isAdmin == false) {
-return useErrorResponse(res,massages.unAutherized,403)
-           
+        const { _id, role } = req.user;
+        if (!(role ==='superAdmin'|| role === 'admin')) {
+            return useErrorResponse(res, massages.unAutherized, 403)
+
         }
 
         const subcategory = await Subcategory.findOne({ _id: subCategoryId })
@@ -51,32 +52,32 @@ return useErrorResponse(res,massages.unAutherized,403)
             subcategory.name = name || subcategory.name,
                 subcategory.category = categoryId || subcategory.category
             subcategory.save();
-            return useSuccessResponse(res, massages.successInUpdate,subcategory,200)
-                 }
+            return useSuccessResponse(res, massages.successInUpdate, subcategory, 200)
+        }
         else {
-            return useErrorResponse(res, massages.notfound,404)
+            return useErrorResponse(res, massages.notfound, 404)
 
         }
     } catch (error) {
         console.log(error)
-        
+
         return useErrorResponse(res, massages.internalError, 500)
     }
 }
 const deletesubCategory = async (req, res) => {
 
     try {
-        // console.log(req.body)
+        console.log(req.body)
 
         const { categoryId, subCategoryId } = req.body
-        const { _id, isAdmin } = req.user;
-        if (isAdmin == false) {
+        const { _id, role } = req.user;
+        if (!(role ==='superAdmin'|| role === 'admin')) {
             return useErrorResponse(res, massages.unAutherized, 403)
         }
 
         const SubCategory = await Subcategory.findByIdAndDelete({ _id: subCategoryId })
-        return useSuccessResponse(res, massages.successInDelete,SubCategory,200)
-          }
+        return useSuccessResponse(res, massages.successInDelete, SubCategory, 200)
+    }
     catch (error) {
         console.log(error)
         return useErrorResponse(res, massages.internalError, 500)
@@ -88,11 +89,17 @@ const readsinglesubCategory = async (req, res) => {
 }
 const readAllsubCategory = async (req, res) => {
     try {
-        const { category } = req.query
+        
+        const { category, subCategoryId } = req.query
+        if (subCategoryId) {
+            
+            const data = await Subcategory.findOne({ _id: subCategoryId }).populate('category')
+            return useSuccessResponse(res, massages.success, data, 200)
+        }
         console.log(category)
         const data = await Subcategory.find({ category: category }).populate('category')
-        return useSuccessResponse(res,massages.success,data,200)
-      
+        return useSuccessResponse(res, massages.success, data, 200)
+
     } catch (error) {
         console.log(error)
         return useErrorResponse(res, massages.internalError, 500)
